@@ -385,6 +385,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8079. Move dfs.client.retry.* confs from DFSConfigKeys to
     HdfsClientConfigKeys.Retry.  (szetszwo)
 
+    HDFS-8073. Split BlockPlacementPolicyDefault.chooseTarget(..) so it
+    can be easily overrided. (Walter Su via vinayakumarb)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
